# MnbkDailyUpdate

./: LICENSE  README.md  pyproject.toml
.github/workflows/: auto_merge.yml  manual.yml  static.yml  update_list.yml  update_list_by_api.yml
src/MnbkDailyUpdate/: battled_player_list.py  cleanup_personal_json.py  config.py  entry_player_list.py  read_sheet_write_json_by_api.py
src/MnbkDailyUpdate/data/: entry_player_list.json  player_battled_list_-5B6C2EF8FA937DF1.json  player_battled_list_0.json  player_battled_list_1.json  player_battled_list_10.json  player_battled_list_100.json  player_battled_list_101.json  player_battled_list_102.json  player_battled_list_103.json  player_battled_list_104.json  player_battled_list_105.json  player_battled_list_106.json  player_battled_list_11.json  player_battled_list_12.json  player_battled_list_13.json  player_battled_list_14.json  player_battled_list_15.json  player_battled_list_16.json  player_battled_list_17.json  player_battled_list_18.json  player_battled_list_19.json  player_battled_list_2.json  player_battled_list_20.json  player_battled_list_21.json  player_battled_list_22.json  player_battled_list_23.json  player_battled_list_24.json  player_battled_list_25.json  player_battled_list_26.json  player_battled_list_27.json  player_battled_list_28.json  player_battled_list_29.json  player_battled_list_3.json  player_battled_list_30.json  player_battled_list_31.json  player_battled_list_32.json  player_battled_list_33.json  player_battled_list_34.json  player_battled_list_35.json  player_battled_list_36.json  (+68 more)
(+5 files in other folders)
